--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,7 @@
 :root{
     --salmon : #EF9D71;
     --black : #000;
-    --white: #fff;
+    --white: #e9e4e4;
     --cyan: #AEDEE0 ;
     --dsalmon: #532521;
     --dcyan: #1f2f32 ;
@@ -36,6 +36,10 @@ body[theme="salmon"] {
       font-weight: 300;
     }
 
+body {
+  transition: background-color 0.6s ease-out;
+}
+
 // @keyframes ease-out-elastic {
 //   0% {
 //     transform: scaleY(0.1);
@@ -45,15 +49,37 @@ body[theme="salmon"] {
 //   }
 // }
 
-@keyframes ease-out-elastic {
-  0%   { transform: scaleY(0.4); }
-  20%  { transform: scaleY(1.2); }  /* overshoot */
-  40%  { transform: scaleY(0.9); }  /* recoil */
-  60%  { transform: scaleY(1.05); } /* second overshoot */
-  80%  { transform: scaleY(0.98); } /* settle */
-  100% { transform: scaleY(1); }
-}
+// @keyframes ease-out-elastic {
+//   0%   { transform: translate(-50%, -50%) scaleY(0.4); }
+//   20%  { transform: translate(-50%, -50%) scaleY(1.2); }
+//   40%  { transform: translate(-50%, -50%) scaleY(0.9); }
+//   60%  { transform: translate(-50%, -50%) scaleY(1.05); }
+//   80%  { transform: translate(-50%, -50%) scaleY(0.98); }
+//   100% { transform: translate(-50%, -50%) scaleY(1); }
+// }
+
+
+
 
 .listelem:hover .imgdiv {
   animation: ease-out-elastic 0.6s ease-out forwards;
+  transform-origin: center;
 }
+
+
+.vdodiv{
+  clip-path: circle(var(--clip) at 50% 50%);
+}
+
+// @keyframes ease-out-elastic {
+//   0%   { scale: 1 0.4; }
+//   20%  { scale: 1 1.2; }
+//   40%  { scale: 1 0.9; }
+//   60%  { scale: 1 1.05; }
+//   80%  { scale: 1 0.98; }
+//   100% { scale: 1 1; }
+// }
+
+// .imgdiv {
+//   transform-origin: center center;
+// }
